{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 218,
  "lineage": "c9f5bd6c-fc5a-5def-330e-1e3a65583e13",
  "resources": [
    {
      "module": "module.avxspoke1_compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-avxspoke1computerg/providers/Microsoft.Network/networkInterfaces/avxvm141_nic",
            "internal_domain_name_suffix": "l2ahkaarx34e5mpukcb2hmub2g.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.141.36",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/rg-av-avxspoke141-653698/providers/Microsoft.Network/virtualNetworks/avxspoke141/subnets/avxspoke141-Private-subnet-1"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-8E-E4-EB",
            "name": "avxvm141_nic",
            "private_ip_address": "10.0.141.36",
            "private_ip_addresses": [
              "10.0.141.36"
            ],
            "resource_group_name": "dwBy-avxspoke1computerg",
            "virtual_machine_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-avxspoke1computerg/providers/Microsoft.Compute/virtualMachines/avxvm141"
          },
          "dependencies": [
            "module.avxspoke1.aviatrix_spoke_gateway.spoke_gw",
            "module.avxspoke1.aviatrix_spoke_transit_attachment.spoke_transit_att",
            "module.avxspoke1.aviatrix_vpc.avx_spoke_vpc",
            "module.avxspoke1_compute.azurerm_resource_group.compute_rg",
            "module.avxtransit.aviatrix_transit_gateway.transit_gw",
            "module.avxtransit.aviatrix_vpc.transit_firenet_vpc",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.avxspoke1_compute",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-avxspoke1computerg/providers/Microsoft.Network/networkInterfaces/avxvm141_nic|/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-avxspoke1computerg/providers/Microsoft.Network/networkSecurityGroups/avxvm141_nsg",
            "network_interface_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-avxspoke1computerg/providers/Microsoft.Network/networkInterfaces/avxvm141_nic",
            "network_security_group_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-avxspoke1computerg/providers/Microsoft.Network/networkSecurityGroups/avxvm141_nsg"
          },
          "dependencies": [
            "module.avxspoke1.aviatrix_spoke_gateway.spoke_gw",
            "module.avxspoke1.aviatrix_spoke_transit_attachment.spoke_transit_att",
            "module.avxspoke1.aviatrix_vpc.avx_spoke_vpc",
            "module.avxspoke1_compute.azurerm_linux_virtual_machine.vm",
            "module.avxspoke1_compute.azurerm_network_interface.vm_nic",
            "module.avxspoke1_compute.azurerm_network_security_group.nsg",
            "module.avxspoke1_compute.azurerm_resource_group.compute_rg",
            "module.avxspoke1_compute.azurerm_storage_account.storage",
            "module.avxtransit.aviatrix_transit_gateway.transit_gw",
            "module.avxtransit.aviatrix_vpc.transit_firenet_vpc",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.avxspoke1_compute",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-avxspoke1computerg/providers/Microsoft.Network/networkSecurityGroups/avxvm141_nsg",
            "location": "eastus",
            "name": "avxvm141_nsg",
            "resource_group_name": "dwBy-avxspoke1computerg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.avxspoke1.aviatrix_spoke_gateway.spoke_gw",
            "module.avxspoke1.aviatrix_spoke_transit_attachment.spoke_transit_att",
            "module.avxspoke1.aviatrix_vpc.avx_spoke_vpc",
            "module.avxspoke1_compute.azurerm_resource_group.compute_rg",
            "module.avxtransit.aviatrix_transit_gateway.transit_gw",
            "module.avxtransit.aviatrix_vpc.transit_firenet_vpc",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.avxtransit_aztransit_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet1_vnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/rg-av-avxtransit140-466583/providers/Microsoft.Network/virtualNetworks/avxtransit140/virtualNetworkPeerings/avxtransit140-transit110_vnet",
            "name": "avxtransit140-transit110_vnet",
            "remote_virtual_network_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet",
            "resource_group_name": "rg-av-avxtransit140-466583",
            "use_remote_gateways": false,
            "virtual_network_name": "avxtransit140"
          },
          "dependencies": [
            "module.avxtransit.aviatrix_firenet.firenet_1",
            "module.avxtransit.aviatrix_transit_gateway.transit_gw",
            "module.avxtransit.aviatrix_vpc.transit_firenet_vpc",
            "module.transit.azurerm_lb.internal_lb",
            "module.transit.azurerm_lb_backend_address_pool.bep",
            "module.transit.azurerm_lb_probe.hp",
            "module.transit.azurerm_lb_rule.lb_rule",
            "module.transit.azurerm_linux_virtual_machine.internal_fw0",
            "module.transit.azurerm_linux_virtual_machine.internal_fw1",
            "module.transit.azurerm_network_interface.fw0_outbound_nic0",
            "module.transit.azurerm_network_interface.fw0_trust_nic2",
            "module.transit.azurerm_network_interface.fw0_untrust_nic1",
            "module.transit.azurerm_network_interface.fw1_outbound_nic0",
            "module.transit.azurerm_network_interface.fw1_trust_nic2",
            "module.transit.azurerm_network_interface.fw1_untrust_nic1",
            "module.transit.azurerm_network_interface_backend_address_pool_association.fw0_trust_nic2_bep",
            "module.transit.azurerm_network_interface_backend_address_pool_association.fw1_trust_nic2_bep",
            "module.transit.azurerm_network_security_group.nsg_mgmt",
            "module.transit.azurerm_network_security_group.nsg_trust",
            "module.transit.azurerm_public_ip.mgmt_pip0",
            "module.transit.azurerm_public_ip.mgmt_pip1",
            "module.transit.azurerm_public_ip.untrust_pip0",
            "module.transit.azurerm_public_ip.untrust_pip1",
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_storage_account.storage",
            "module.transit.azurerm_subnet.mgmt_snet",
            "module.transit.azurerm_subnet.trust_snet",
            "module.transit.azurerm_subnet.untrust_snet",
            "module.transit.azurerm_subnet_network_security_group_association.mgmtnsg_assoc",
            "module.transit.azurerm_subnet_network_security_group_association.tfer--Trust_network_security_group_association",
            "module.transit.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.avxtransit_aztransit_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet2_vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet/virtualNetworkPeerings/avxtransit140-transit110_vnet",
            "name": "avxtransit140-transit110_vnet",
            "remote_virtual_network_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/rg-av-avxtransit140-466583/providers/Microsoft.Network/virtualNetworks/avxtransit140",
            "resource_group_name": "aztransit110-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "transit110_vnet"
          },
          "dependencies": [
            "data.azurerm_client_config.current",
            "module.avxtransit.aviatrix_firenet.firenet_1",
            "module.avxtransit.aviatrix_transit_gateway.transit_gw",
            "module.avxtransit.aviatrix_vpc.transit_firenet_vpc",
            "module.avxtransit_aztransit_peering.azurerm_virtual_network_peering.vnet1_vnet2",
            "module.transit.azurerm_lb.internal_lb",
            "module.transit.azurerm_lb_backend_address_pool.bep",
            "module.transit.azurerm_lb_probe.hp",
            "module.transit.azurerm_lb_rule.lb_rule",
            "module.transit.azurerm_linux_virtual_machine.internal_fw0",
            "module.transit.azurerm_linux_virtual_machine.internal_fw1",
            "module.transit.azurerm_network_interface.fw0_outbound_nic0",
            "module.transit.azurerm_network_interface.fw0_trust_nic2",
            "module.transit.azurerm_network_interface.fw0_untrust_nic1",
            "module.transit.azurerm_network_interface.fw1_outbound_nic0",
            "module.transit.azurerm_network_interface.fw1_trust_nic2",
            "module.transit.azurerm_network_interface.fw1_untrust_nic1",
            "module.transit.azurerm_network_interface_backend_address_pool_association.fw0_trust_nic2_bep",
            "module.transit.azurerm_network_interface_backend_address_pool_association.fw1_trust_nic2_bep",
            "module.transit.azurerm_network_security_group.nsg_mgmt",
            "module.transit.azurerm_network_security_group.nsg_trust",
            "module.transit.azurerm_public_ip.mgmt_pip0",
            "module.transit.azurerm_public_ip.mgmt_pip1",
            "module.transit.azurerm_public_ip.untrust_pip0",
            "module.transit.azurerm_public_ip.untrust_pip1",
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_storage_account.storage",
            "module.transit.azurerm_subnet.mgmt_snet",
            "module.transit.azurerm_subnet.trust_snet",
            "module.transit.azurerm_subnet.untrust_snet",
            "module.transit.azurerm_subnet_network_security_group_association.mgmtnsg_assoc",
            "module.transit.azurerm_subnet_network_security_group_association.tfer--Trust_network_security_group_association",
            "module.transit.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.az_spoke1",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "defaultBackendUDR",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": true,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke1rg/providers/Microsoft.Network/routeTables/backend_spoke151_rtb",
            "location": "eastus",
            "name": "backend_spoke151_rtb",
            "resource_group_name": "dwBy-azspoke1rg",
            "route": [
              {
                "address_prefix": "10.0.0.0/8",
                "name": "10-0-0-0-8",
                "next_hop_in_ip_address": "10.198.10.174",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "172.16.0.0/12",
                "name": "172-16-0-0-12",
                "next_hop_in_ip_address": "10.198.10.174",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "192.168.0.0/16",
                "name": "192-168-0-0-16",
                "next_hop_in_ip_address": "10.198.10.174",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke1rg/providers/Microsoft.Network/virtualNetworks/spoke151/subnets/backend"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.az_spoke1.azurerm_resource_group.spoke_rg",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.az_spoke1",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "backend_snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.151.0/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke1rg/providers/Microsoft.Network/virtualNetworks/spoke151/subnets/backend",
            "name": "backend",
            "resource_group_name": "dwBy-azspoke1rg",
            "virtual_network_name": "spoke151"
          },
          "dependencies": [
            "module.az_spoke1.azurerm_resource_group.spoke_rg",
            "module.az_spoke1.azurerm_virtual_network.vnet",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.az_spoke1",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "backendsnet_rtb_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke1rg/providers/Microsoft.Network/virtualNetworks/spoke151/subnets/backend",
            "route_table_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke1rg/providers/Microsoft.Network/routeTables/backend_spoke151_rtb",
            "subnet_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke1rg/providers/Microsoft.Network/virtualNetworks/spoke151/subnets/backend"
          },
          "dependencies": [
            "module.az_spoke1.azurerm_resource_group.spoke_rg",
            "module.az_spoke1.azurerm_route_table.defaultBackendUDR",
            "module.az_spoke1.azurerm_subnet.backend_snet",
            "module.az_spoke1.azurerm_virtual_network.vnet",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.az_spoke1",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.151.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "577c856d-40c2-4efb-a267-51a3cff64681",
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke1rg/providers/Microsoft.Network/virtualNetworks/spoke151",
            "location": "eastus",
            "name": "spoke151",
            "resource_group_name": "dwBy-azspoke1rg",
            "subnet": [
              {
                "address_prefix": "10.0.151.0/28",
                "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke1rg/providers/Microsoft.Network/virtualNetworks/spoke151/subnets/backend",
                "name": "backend"
              }
            ]
          },
          "dependencies": [
            "module.az_spoke1.azurerm_resource_group.spoke_rg",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.az_spoke1_compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke1computerg/providers/Microsoft.Network/networkInterfaces/vm151_nic",
            "internal_domain_name_suffix": "nwcxyv4cid3u3ithkgr253sgqb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.151.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke1rg/providers/Microsoft.Network/virtualNetworks/spoke151/subnets/backend"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-54-BA-D9",
            "name": "vm151_nic",
            "private_ip_address": "10.0.151.4",
            "private_ip_addresses": [
              "10.0.151.4"
            ],
            "resource_group_name": "dwBy-azspoke1computerg",
            "virtual_machine_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke1computerg/providers/Microsoft.Compute/virtualMachines/vm151"
          },
          "dependencies": [
            "module.az_spoke1.azurerm_resource_group.spoke_rg",
            "module.az_spoke1.azurerm_route_table.defaultBackendUDR",
            "module.az_spoke1.azurerm_subnet.backend_snet",
            "module.az_spoke1.azurerm_subnet_route_table_association.backendsnet_rtb_assoc",
            "module.az_spoke1.azurerm_virtual_network.vnet",
            "module.az_spoke1_compute.azurerm_resource_group.compute_rg",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.az_spoke1_compute",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke1computerg/providers/Microsoft.Network/networkInterfaces/vm151_nic|/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke1computerg/providers/Microsoft.Network/networkSecurityGroups/vm151_nsg",
            "network_interface_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke1computerg/providers/Microsoft.Network/networkInterfaces/vm151_nic",
            "network_security_group_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke1computerg/providers/Microsoft.Network/networkSecurityGroups/vm151_nsg"
          },
          "dependencies": [
            "module.az_spoke1.azurerm_resource_group.spoke_rg",
            "module.az_spoke1.azurerm_route_table.defaultBackendUDR",
            "module.az_spoke1.azurerm_subnet.backend_snet",
            "module.az_spoke1.azurerm_subnet_route_table_association.backendsnet_rtb_assoc",
            "module.az_spoke1.azurerm_virtual_network.vnet",
            "module.az_spoke1_compute.azurerm_linux_virtual_machine.vm",
            "module.az_spoke1_compute.azurerm_network_interface.vm_nic",
            "module.az_spoke1_compute.azurerm_network_security_group.nsg",
            "module.az_spoke1_compute.azurerm_resource_group.compute_rg",
            "module.az_spoke1_compute.azurerm_storage_account.storage",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.az_spoke1_compute",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke1computerg/providers/Microsoft.Network/networkSecurityGroups/vm151_nsg",
            "location": "eastus",
            "name": "vm151_nsg",
            "resource_group_name": "dwBy-azspoke1computerg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.az_spoke1.azurerm_resource_group.spoke_rg",
            "module.az_spoke1.azurerm_route_table.defaultBackendUDR",
            "module.az_spoke1.azurerm_subnet.backend_snet",
            "module.az_spoke1.azurerm_subnet_route_table_association.backendsnet_rtb_assoc",
            "module.az_spoke1.azurerm_virtual_network.vnet",
            "module.az_spoke1_compute.azurerm_resource_group.compute_rg",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.az_spoke2",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "defaultBackendUDR",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": true,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke2rg/providers/Microsoft.Network/routeTables/backend_spoke152_rtb",
            "location": "eastus",
            "name": "backend_spoke152_rtb",
            "resource_group_name": "dwBy-azspoke2rg",
            "route": [
              {
                "address_prefix": "10.0.0.0/8",
                "name": "10-0-0-0-8",
                "next_hop_in_ip_address": "10.198.10.174",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "172.16.0.0/12",
                "name": "172-16-0-0-12",
                "next_hop_in_ip_address": "10.198.10.174",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "192.168.0.0/16",
                "name": "192-168-0-0-16",
                "next_hop_in_ip_address": "10.198.10.174",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke2rg/providers/Microsoft.Network/virtualNetworks/spoke152/subnets/backend"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.az_spoke2.azurerm_resource_group.spoke_rg",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.az_spoke2",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "backend_snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.152.0/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke2rg/providers/Microsoft.Network/virtualNetworks/spoke152/subnets/backend",
            "name": "backend",
            "resource_group_name": "dwBy-azspoke2rg",
            "virtual_network_name": "spoke152"
          },
          "dependencies": [
            "module.az_spoke2.azurerm_resource_group.spoke_rg",
            "module.az_spoke2.azurerm_virtual_network.vnet",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.az_spoke2",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "backendsnet_rtb_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke2rg/providers/Microsoft.Network/virtualNetworks/spoke152/subnets/backend",
            "route_table_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke2rg/providers/Microsoft.Network/routeTables/backend_spoke152_rtb",
            "subnet_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke2rg/providers/Microsoft.Network/virtualNetworks/spoke152/subnets/backend"
          },
          "dependencies": [
            "module.az_spoke2.azurerm_resource_group.spoke_rg",
            "module.az_spoke2.azurerm_route_table.defaultBackendUDR",
            "module.az_spoke2.azurerm_subnet.backend_snet",
            "module.az_spoke2.azurerm_virtual_network.vnet",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.az_spoke2",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.152.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "fe9db7b1-70fb-403f-9f36-10bba5dec7cf",
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke2rg/providers/Microsoft.Network/virtualNetworks/spoke152",
            "location": "eastus",
            "name": "spoke152",
            "resource_group_name": "dwBy-azspoke2rg",
            "subnet": [
              {
                "address_prefix": "10.0.152.0/28",
                "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke2rg/providers/Microsoft.Network/virtualNetworks/spoke152/subnets/backend",
                "name": "backend"
              }
            ]
          },
          "dependencies": [
            "module.az_spoke2.azurerm_resource_group.spoke_rg",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.az_spoke2_compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke2computerg/providers/Microsoft.Network/networkInterfaces/vm152_nic",
            "internal_domain_name_suffix": "wg1z15x1oa5ubhzwcc30lxwhzh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.152.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke2rg/providers/Microsoft.Network/virtualNetworks/spoke152/subnets/backend"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-54-BA-6D",
            "name": "vm152_nic",
            "private_ip_address": "10.0.152.4",
            "private_ip_addresses": [
              "10.0.152.4"
            ],
            "resource_group_name": "dwBy-azspoke2computerg",
            "virtual_machine_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke2computerg/providers/Microsoft.Compute/virtualMachines/vm152"
          },
          "dependencies": [
            "module.az_spoke2.azurerm_resource_group.spoke_rg",
            "module.az_spoke2.azurerm_route_table.defaultBackendUDR",
            "module.az_spoke2.azurerm_subnet.backend_snet",
            "module.az_spoke2.azurerm_subnet_route_table_association.backendsnet_rtb_assoc",
            "module.az_spoke2.azurerm_virtual_network.vnet",
            "module.az_spoke2_compute.azurerm_resource_group.compute_rg",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.az_spoke2_compute",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke2computerg/providers/Microsoft.Network/networkInterfaces/vm152_nic|/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke2computerg/providers/Microsoft.Network/networkSecurityGroups/vm152_nsg",
            "network_interface_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke2computerg/providers/Microsoft.Network/networkInterfaces/vm152_nic",
            "network_security_group_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke2computerg/providers/Microsoft.Network/networkSecurityGroups/vm152_nsg"
          },
          "dependencies": [
            "module.az_spoke2.azurerm_resource_group.spoke_rg",
            "module.az_spoke2.azurerm_route_table.defaultBackendUDR",
            "module.az_spoke2.azurerm_subnet.backend_snet",
            "module.az_spoke2.azurerm_subnet_route_table_association.backendsnet_rtb_assoc",
            "module.az_spoke2.azurerm_virtual_network.vnet",
            "module.az_spoke2_compute.azurerm_linux_virtual_machine.vm",
            "module.az_spoke2_compute.azurerm_network_interface.vm_nic",
            "module.az_spoke2_compute.azurerm_network_security_group.nsg",
            "module.az_spoke2_compute.azurerm_resource_group.compute_rg",
            "module.az_spoke2_compute.azurerm_storage_account.storage",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.az_spoke2_compute",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke2computerg/providers/Microsoft.Network/networkSecurityGroups/vm152_nsg",
            "location": "eastus",
            "name": "vm152_nsg",
            "resource_group_name": "dwBy-azspoke2computerg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.az_spoke2.azurerm_resource_group.spoke_rg",
            "module.az_spoke2.azurerm_route_table.defaultBackendUDR",
            "module.az_spoke2.azurerm_subnet.backend_snet",
            "module.az_spoke2.azurerm_subnet_route_table_association.backendsnet_rtb_assoc",
            "module.az_spoke2.azurerm_virtual_network.vnet",
            "module.az_spoke2_compute.azurerm_resource_group.compute_rg",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.azspoke1_aztransit_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet1_vnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke1rg/providers/Microsoft.Network/virtualNetworks/spoke151/virtualNetworkPeerings/spoke151-transit110_vnet",
            "name": "spoke151-transit110_vnet",
            "remote_virtual_network_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet",
            "resource_group_name": "dwBy-azspoke1rg",
            "use_remote_gateways": false,
            "virtual_network_name": "spoke151"
          },
          "dependencies": [
            "module.az_spoke1.azurerm_resource_group.spoke_rg",
            "module.az_spoke1.azurerm_route_table.defaultBackendUDR",
            "module.az_spoke1.azurerm_subnet.backend_snet",
            "module.az_spoke1.azurerm_subnet_route_table_association.backendsnet_rtb_assoc",
            "module.az_spoke1.azurerm_virtual_network.vnet",
            "module.transit.azurerm_lb.internal_lb",
            "module.transit.azurerm_lb_backend_address_pool.bep",
            "module.transit.azurerm_lb_probe.hp",
            "module.transit.azurerm_lb_rule.lb_rule",
            "module.transit.azurerm_linux_virtual_machine.internal_fw0",
            "module.transit.azurerm_linux_virtual_machine.internal_fw1",
            "module.transit.azurerm_network_interface.fw0_outbound_nic0",
            "module.transit.azurerm_network_interface.fw0_trust_nic2",
            "module.transit.azurerm_network_interface.fw0_untrust_nic1",
            "module.transit.azurerm_network_interface.fw1_outbound_nic0",
            "module.transit.azurerm_network_interface.fw1_trust_nic2",
            "module.transit.azurerm_network_interface.fw1_untrust_nic1",
            "module.transit.azurerm_network_interface_backend_address_pool_association.fw0_trust_nic2_bep",
            "module.transit.azurerm_network_interface_backend_address_pool_association.fw1_trust_nic2_bep",
            "module.transit.azurerm_network_security_group.nsg_mgmt",
            "module.transit.azurerm_network_security_group.nsg_trust",
            "module.transit.azurerm_public_ip.mgmt_pip0",
            "module.transit.azurerm_public_ip.mgmt_pip1",
            "module.transit.azurerm_public_ip.untrust_pip0",
            "module.transit.azurerm_public_ip.untrust_pip1",
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_storage_account.storage",
            "module.transit.azurerm_subnet.mgmt_snet",
            "module.transit.azurerm_subnet.trust_snet",
            "module.transit.azurerm_subnet.untrust_snet",
            "module.transit.azurerm_subnet_network_security_group_association.mgmtnsg_assoc",
            "module.transit.azurerm_subnet_network_security_group_association.tfer--Trust_network_security_group_association",
            "module.transit.azurerm_virtual_network.vnet",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.azspoke1_aztransit_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet2_vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet/virtualNetworkPeerings/spoke151-transit110_vnet",
            "name": "spoke151-transit110_vnet",
            "remote_virtual_network_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke1rg/providers/Microsoft.Network/virtualNetworks/spoke151",
            "resource_group_name": "aztransit110-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "transit110_vnet"
          },
          "dependencies": [
            "module.az_spoke1.azurerm_resource_group.spoke_rg",
            "module.az_spoke1.azurerm_route_table.defaultBackendUDR",
            "module.az_spoke1.azurerm_subnet.backend_snet",
            "module.az_spoke1.azurerm_subnet_route_table_association.backendsnet_rtb_assoc",
            "module.az_spoke1.azurerm_virtual_network.vnet",
            "module.azspoke1_aztransit_peering.azurerm_virtual_network_peering.vnet1_vnet2",
            "module.transit.azurerm_lb.internal_lb",
            "module.transit.azurerm_lb_backend_address_pool.bep",
            "module.transit.azurerm_lb_probe.hp",
            "module.transit.azurerm_lb_rule.lb_rule",
            "module.transit.azurerm_linux_virtual_machine.internal_fw0",
            "module.transit.azurerm_linux_virtual_machine.internal_fw1",
            "module.transit.azurerm_network_interface.fw0_outbound_nic0",
            "module.transit.azurerm_network_interface.fw0_trust_nic2",
            "module.transit.azurerm_network_interface.fw0_untrust_nic1",
            "module.transit.azurerm_network_interface.fw1_outbound_nic0",
            "module.transit.azurerm_network_interface.fw1_trust_nic2",
            "module.transit.azurerm_network_interface.fw1_untrust_nic1",
            "module.transit.azurerm_network_interface_backend_address_pool_association.fw0_trust_nic2_bep",
            "module.transit.azurerm_network_interface_backend_address_pool_association.fw1_trust_nic2_bep",
            "module.transit.azurerm_network_security_group.nsg_mgmt",
            "module.transit.azurerm_network_security_group.nsg_trust",
            "module.transit.azurerm_public_ip.mgmt_pip0",
            "module.transit.azurerm_public_ip.mgmt_pip1",
            "module.transit.azurerm_public_ip.untrust_pip0",
            "module.transit.azurerm_public_ip.untrust_pip1",
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_storage_account.storage",
            "module.transit.azurerm_subnet.mgmt_snet",
            "module.transit.azurerm_subnet.trust_snet",
            "module.transit.azurerm_subnet.untrust_snet",
            "module.transit.azurerm_subnet_network_security_group_association.mgmtnsg_assoc",
            "module.transit.azurerm_subnet_network_security_group_association.tfer--Trust_network_security_group_association",
            "module.transit.azurerm_virtual_network.vnet",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.azspoke2_aztransit_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet1_vnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke2rg/providers/Microsoft.Network/virtualNetworks/spoke152/virtualNetworkPeerings/spoke152-transit110_vnet",
            "name": "spoke152-transit110_vnet",
            "remote_virtual_network_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet",
            "resource_group_name": "dwBy-azspoke2rg",
            "use_remote_gateways": false,
            "virtual_network_name": "spoke152"
          },
          "dependencies": [
            "module.az_spoke2.azurerm_resource_group.spoke_rg",
            "module.az_spoke2.azurerm_route_table.defaultBackendUDR",
            "module.az_spoke2.azurerm_subnet.backend_snet",
            "module.az_spoke2.azurerm_subnet_route_table_association.backendsnet_rtb_assoc",
            "module.az_spoke2.azurerm_virtual_network.vnet",
            "module.transit.azurerm_lb.internal_lb",
            "module.transit.azurerm_lb_backend_address_pool.bep",
            "module.transit.azurerm_lb_probe.hp",
            "module.transit.azurerm_lb_rule.lb_rule",
            "module.transit.azurerm_linux_virtual_machine.internal_fw0",
            "module.transit.azurerm_linux_virtual_machine.internal_fw1",
            "module.transit.azurerm_network_interface.fw0_outbound_nic0",
            "module.transit.azurerm_network_interface.fw0_trust_nic2",
            "module.transit.azurerm_network_interface.fw0_untrust_nic1",
            "module.transit.azurerm_network_interface.fw1_outbound_nic0",
            "module.transit.azurerm_network_interface.fw1_trust_nic2",
            "module.transit.azurerm_network_interface.fw1_untrust_nic1",
            "module.transit.azurerm_network_interface_backend_address_pool_association.fw0_trust_nic2_bep",
            "module.transit.azurerm_network_interface_backend_address_pool_association.fw1_trust_nic2_bep",
            "module.transit.azurerm_network_security_group.nsg_mgmt",
            "module.transit.azurerm_network_security_group.nsg_trust",
            "module.transit.azurerm_public_ip.mgmt_pip0",
            "module.transit.azurerm_public_ip.mgmt_pip1",
            "module.transit.azurerm_public_ip.untrust_pip0",
            "module.transit.azurerm_public_ip.untrust_pip1",
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_storage_account.storage",
            "module.transit.azurerm_subnet.mgmt_snet",
            "module.transit.azurerm_subnet.trust_snet",
            "module.transit.azurerm_subnet.untrust_snet",
            "module.transit.azurerm_subnet_network_security_group_association.mgmtnsg_assoc",
            "module.transit.azurerm_subnet_network_security_group_association.tfer--Trust_network_security_group_association",
            "module.transit.azurerm_virtual_network.vnet",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.azspoke2_aztransit_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet2_vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet/virtualNetworkPeerings/spoke152-transit110_vnet",
            "name": "spoke152-transit110_vnet",
            "remote_virtual_network_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/dwBy-azspoke2rg/providers/Microsoft.Network/virtualNetworks/spoke152",
            "resource_group_name": "aztransit110-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "transit110_vnet"
          },
          "dependencies": [
            "module.az_spoke2.azurerm_resource_group.spoke_rg",
            "module.az_spoke2.azurerm_route_table.defaultBackendUDR",
            "module.az_spoke2.azurerm_subnet.backend_snet",
            "module.az_spoke2.azurerm_subnet_route_table_association.backendsnet_rtb_assoc",
            "module.az_spoke2.azurerm_virtual_network.vnet",
            "module.azspoke2_aztransit_peering.azurerm_virtual_network_peering.vnet1_vnet2",
            "module.transit.azurerm_lb.internal_lb",
            "module.transit.azurerm_lb_backend_address_pool.bep",
            "module.transit.azurerm_lb_probe.hp",
            "module.transit.azurerm_lb_rule.lb_rule",
            "module.transit.azurerm_linux_virtual_machine.internal_fw0",
            "module.transit.azurerm_linux_virtual_machine.internal_fw1",
            "module.transit.azurerm_network_interface.fw0_outbound_nic0",
            "module.transit.azurerm_network_interface.fw0_trust_nic2",
            "module.transit.azurerm_network_interface.fw0_untrust_nic1",
            "module.transit.azurerm_network_interface.fw1_outbound_nic0",
            "module.transit.azurerm_network_interface.fw1_trust_nic2",
            "module.transit.azurerm_network_interface.fw1_untrust_nic1",
            "module.transit.azurerm_network_interface_backend_address_pool_association.fw0_trust_nic2_bep",
            "module.transit.azurerm_network_interface_backend_address_pool_association.fw1_trust_nic2_bep",
            "module.transit.azurerm_network_security_group.nsg_mgmt",
            "module.transit.azurerm_network_security_group.nsg_trust",
            "module.transit.azurerm_public_ip.mgmt_pip0",
            "module.transit.azurerm_public_ip.mgmt_pip1",
            "module.transit.azurerm_public_ip.untrust_pip0",
            "module.transit.azurerm_public_ip.untrust_pip1",
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_storage_account.storage",
            "module.transit.azurerm_subnet.mgmt_snet",
            "module.transit.azurerm_subnet.trust_snet",
            "module.transit.azurerm_subnet.untrust_snet",
            "module.transit.azurerm_subnet_network_security_group_association.mgmtnsg_assoc",
            "module.transit.azurerm_subnet_network_security_group_association.tfer--Trust_network_security_group_association",
            "module.transit.azurerm_virtual_network.vnet",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "internal_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/loadBalancers/internal-fw-lb/frontendIPConfigurations/internal-fw-lb-fe-ip",
                "load_balancer_rules": [
                  "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/loadBalancers/internal-fw-lb/loadBalancingRules/IlbRule"
                ],
                "name": "internal-fw-lb-fe-ip",
                "private_ip_address": "10.198.10.174",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet/subnets/fw110-trust"
              }
            ],
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/loadBalancers/internal-fw-lb",
            "location": "eastus",
            "name": "internal-fw-lb",
            "private_ip_address": "10.198.10.174",
            "private_ip_addresses": [
              "10.198.10.174"
            ],
            "resource_group_name": "aztransit110-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_subnet.trust_snet",
            "module.transit.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "bep",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/networkInterfaces/fw1101-trust2/ipConfigurations/fw1101-trust",
              "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/networkInterfaces/fw1100-trust2/ipConfigurations/fw1100-trust"
            ],
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/loadBalancers/internal-fw-lb/backendAddressPools/fw110-bep",
            "load_balancing_rules": [
              "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/loadBalancers/internal-fw-lb/loadBalancingRules/IlbRule"
            ],
            "loadbalancer_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/loadBalancers/internal-fw-lb",
            "name": "fw110-bep"
          },
          "dependencies": [
            "module.transit.azurerm_lb.internal_lb",
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_subnet.trust_snet",
            "module.transit.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "hp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/loadBalancers/internal-fw-lb/probes/fw110-ewlbprobe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/loadBalancers/internal-fw-lb/loadBalancingRules/IlbRule"
            ],
            "loadbalancer_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/loadBalancers/internal-fw-lb",
            "name": "fw110-ewlbprobe",
            "number_of_probes": 2,
            "port": 22,
            "protocol": "Tcp"
          },
          "dependencies": [
            "module.transit.azurerm_lb.internal_lb",
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_subnet.trust_snet",
            "module.transit.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/loadBalancers/internal-fw-lb/backendAddressPools/fw110-bep"
            ],
            "backend_port": 0,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/loadBalancers/internal-fw-lb/frontendIPConfigurations/internal-fw-lb-fe-ip",
            "frontend_ip_configuration_name": "internal-fw-lb-fe-ip",
            "frontend_port": 0,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/loadBalancers/internal-fw-lb/loadBalancingRules/IlbRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/loadBalancers/internal-fw-lb",
            "name": "IlbRule",
            "probe_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/loadBalancers/internal-fw-lb/probes/fw110-ewlbprobe",
            "protocol": "All"
          },
          "dependencies": [
            "module.transit.azurerm_lb.internal_lb",
            "module.transit.azurerm_lb_backend_address_pool.bep",
            "module.transit.azurerm_lb_probe.hp",
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_subnet.trust_snet",
            "module.transit.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "fw0_outbound_nic0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/networkInterfaces/fw1100-mgmt0",
            "internal_domain_name_suffix": "mju0n2cxdpiupaxueafp3argxh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "fw1100-mgmt",
                "primary": true,
                "private_ip_address": "10.198.10.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/publicIPAddresses/fw110-mgmt0",
                "subnet_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet/subnets/fw110-mgmt"
              }
            ],
            "location": "eastus",
            "name": "fw1100-mgmt0",
            "private_ip_address": "10.198.10.4",
            "private_ip_addresses": [
              "10.198.10.4"
            ],
            "resource_group_name": "aztransit110-rg"
          },
          "dependencies": [
            "module.transit.azurerm_public_ip.mgmt_pip0",
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_subnet.mgmt_snet",
            "module.transit.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "fw0_trust_nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/networkInterfaces/fw1100-trust2",
            "internal_domain_name_suffix": "mju0n2cxdpiupaxueafp3argxh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "fw1100-trust",
                "primary": true,
                "private_ip_address": "10.198.10.165",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet/subnets/fw110-trust"
              }
            ],
            "location": "eastus",
            "name": "fw1100-trust2",
            "private_ip_address": "10.198.10.165",
            "private_ip_addresses": [
              "10.198.10.165"
            ],
            "resource_group_name": "aztransit110-rg"
          },
          "dependencies": [
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_subnet.trust_snet",
            "module.transit.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "fw0_untrust_nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/networkInterfaces/fw1100-untrust1",
            "internal_domain_name_suffix": "mju0n2cxdpiupaxueafp3argxh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "fw1100-untrust",
                "primary": true,
                "private_ip_address": "10.198.10.21",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/publicIPAddresses/fw110-untrust0",
                "subnet_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet/subnets/fw110-untrust"
              }
            ],
            "location": "eastus",
            "name": "fw1100-untrust1",
            "private_ip_address": "10.198.10.21",
            "private_ip_addresses": [
              "10.198.10.21"
            ],
            "resource_group_name": "aztransit110-rg"
          },
          "dependencies": [
            "module.transit.azurerm_public_ip.untrust_pip0",
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_subnet.untrust_snet",
            "module.transit.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "fw1_outbound_nic0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/networkInterfaces/fw1101-mgmt0",
            "internal_domain_name_suffix": "mju0n2cxdpiupaxueafp3argxh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "fw1101-mgmt",
                "primary": true,
                "private_ip_address": "10.198.10.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/publicIPAddresses/fw110-mgmt1",
                "subnet_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet/subnets/fw110-mgmt"
              }
            ],
            "location": "eastus",
            "name": "fw1101-mgmt0",
            "private_ip_address": "10.198.10.5",
            "private_ip_addresses": [
              "10.198.10.5"
            ],
            "resource_group_name": "aztransit110-rg"
          },
          "dependencies": [
            "module.transit.azurerm_public_ip.mgmt_pip1",
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_subnet.mgmt_snet",
            "module.transit.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "fw1_trust_nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/networkInterfaces/fw1101-trust2",
            "internal_domain_name_suffix": "mju0n2cxdpiupaxueafp3argxh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "fw1101-trust",
                "primary": true,
                "private_ip_address": "10.198.10.164",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet/subnets/fw110-trust"
              }
            ],
            "location": "eastus",
            "name": "fw1101-trust2",
            "private_ip_address": "10.198.10.164",
            "private_ip_addresses": [
              "10.198.10.164"
            ],
            "resource_group_name": "aztransit110-rg"
          },
          "dependencies": [
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_subnet.trust_snet",
            "module.transit.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "fw1_untrust_nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/networkInterfaces/fw1101-untrust1",
            "internal_domain_name_suffix": "mju0n2cxdpiupaxueafp3argxh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "fw1101-untrust",
                "primary": true,
                "private_ip_address": "10.198.10.20",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/publicIPAddresses/fw110-untrust1",
                "subnet_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet/subnets/fw110-untrust"
              }
            ],
            "location": "eastus",
            "name": "fw1101-untrust1",
            "private_ip_address": "10.198.10.20",
            "private_ip_addresses": [
              "10.198.10.20"
            ],
            "resource_group_name": "aztransit110-rg"
          },
          "dependencies": [
            "module.transit.azurerm_public_ip.untrust_pip1",
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_subnet.untrust_snet",
            "module.transit.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "fw0_trust_nic2_bep",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/loadBalancers/internal-fw-lb/backendAddressPools/fw110-bep",
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/networkInterfaces/fw1100-trust2/ipConfigurations/fw1100-trust|/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/loadBalancers/internal-fw-lb/backendAddressPools/fw110-bep",
            "ip_configuration_name": "fw1100-trust",
            "network_interface_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/networkInterfaces/fw1100-trust2"
          },
          "dependencies": [
            "module.transit.azurerm_lb.internal_lb",
            "module.transit.azurerm_lb_backend_address_pool.bep",
            "module.transit.azurerm_network_interface.fw0_trust_nic2",
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_subnet.trust_snet",
            "module.transit.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "fw1_trust_nic2_bep",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/loadBalancers/internal-fw-lb/backendAddressPools/fw110-bep",
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/networkInterfaces/fw1101-trust2/ipConfigurations/fw1101-trust|/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/loadBalancers/internal-fw-lb/backendAddressPools/fw110-bep",
            "ip_configuration_name": "fw1101-trust",
            "network_interface_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/networkInterfaces/fw1101-trust2"
          },
          "dependencies": [
            "module.transit.azurerm_lb.internal_lb",
            "module.transit.azurerm_lb_backend_address_pool.bep",
            "module.transit.azurerm_network_interface.fw1_trust_nic2",
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_subnet.trust_snet",
            "module.transit.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/networkSecurityGroups/fw110-mgmtnsg",
            "location": "eastus",
            "name": "fw110-mgmtnsg",
            "resource_group_name": "aztransit110-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Rule",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Outside-From-IP",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "162.157.131.33/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_trust",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/networkSecurityGroups/fw110-trustnsg",
            "location": "eastus",
            "name": "fw110-trustnsg",
            "resource_group_name": "aztransit110-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Port_Any",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mgmt_pip0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/publicIPAddresses/fw110-mgmt0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.228.254.158",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "fw110-mgmt0",
            "resource_group_name": "aztransit110-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.transit.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mgmt_pip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/publicIPAddresses/fw110-mgmt1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.228.254.31",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "fw110-mgmt1",
            "resource_group_name": "aztransit110-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.transit.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "untrust_pip0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/publicIPAddresses/fw110-untrust0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.228.254.136",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "fw110-untrust0",
            "resource_group_name": "aztransit110-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.transit.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "untrust_pip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/publicIPAddresses/fw110-untrust1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.228.254.162",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "fw110-untrust1",
            "resource_group_name": "aztransit110-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.transit.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mgmt_snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.198.10.0/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet/subnets/fw110-mgmt",
            "name": "fw110-mgmt",
            "resource_group_name": "aztransit110-rg",
            "virtual_network_name": "transit110_vnet"
          },
          "dependencies": [
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "trust_snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.198.10.160/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet/subnets/fw110-trust",
            "name": "fw110-trust",
            "resource_group_name": "aztransit110-rg",
            "virtual_network_name": "transit110_vnet"
          },
          "dependencies": [
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "untrust_snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.198.10.16/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet/subnets/fw110-untrust",
            "name": "fw110-untrust",
            "resource_group_name": "aztransit110-rg",
            "virtual_network_name": "transit110_vnet"
          },
          "dependencies": [
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mgmtnsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet/subnets/fw110-mgmt",
            "network_security_group_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/networkSecurityGroups/fw110-mgmtnsg",
            "subnet_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet/subnets/fw110-mgmt"
          },
          "dependencies": [
            "module.transit.azurerm_network_security_group.nsg_mgmt",
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_subnet.mgmt_snet",
            "module.transit.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "tfer--Trust_network_security_group_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet/subnets/fw110-trust",
            "network_security_group_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/networkSecurityGroups/fw110-trustnsg",
            "subnet_id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet/subnets/fw110-trust"
          },
          "dependencies": [
            "module.transit.azurerm_network_security_group.nsg_trust",
            "module.transit.azurerm_resource_group.rg",
            "module.transit.azurerm_subnet.trust_snet",
            "module.transit.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.transit",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.198.10.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f0a66962-1b57-47d1-82f4-200afe8226bf",
            "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet",
            "location": "eastus",
            "name": "transit110_vnet",
            "resource_group_name": "aztransit110-rg",
            "subnet": [
              {
                "address_prefix": "10.198.10.0/28",
                "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet/subnets/fw110-mgmt",
                "name": "fw110-mgmt",
                "security_group": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/networkSecurityGroups/fw110-mgmtnsg"
              },
              {
                "address_prefix": "10.198.10.16/28",
                "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet/subnets/fw110-untrust",
                "name": "fw110-untrust"
              },
              {
                "address_prefix": "10.198.10.160/28",
                "id": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/virtualNetworks/transit110_vnet/subnets/fw110-trust",
                "name": "fw110-trust",
                "security_group": "/subscriptions/2d058077-13cf-445e-acdc-997e4036a37e/resourceGroups/aztransit110-rg/providers/Microsoft.Network/networkSecurityGroups/fw110-trustnsg"
              }
            ]
          },
          "dependencies": [
            "module.transit.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}